# dbpaw

./: .gitignore  AGENTS.md  CLAUDE.md  MCP_ARCHITECTURE_ANALYSIS.md  MULTI_RESULT_SET_PLAN.md  README.md  README_CN.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build-multiplatform.yml  release.yml
.superpowers/brainstorm/40785-1780024421/content/: context-menu.html  er-button-placement.html
.superpowers/brainstorm/40785-1780024421/state/: events  server-stopped
docs/: architecture.md  commands.md  database-support-analysis.md  mcp-quickstart.md  mcp.md  windows-icon-fix.md
docs/superpowers/plans/: 2026-05-26-er-diagram.md  2026-05-27-db2-driver.md  2026-05-27-dynamodb-datasource-plan.md  2026-05-27-mongodb-consolidation.md  2026-05-28-elasticsearch-test-improvement.md  2026-05-29-er-diagram-optimization.md  2026-05-30-backend-test-coverage-improvement.md  2026-05-31-mcp-server-protocol-completeness.md  2026-06-02-config-sync.md
docs/superpowers/specs/: 2026-05-26-er-diagram-design.md  2026-05-27-connection-import-design.md  2026-05-27-db2-driver-design.md  2026-05-27-dynamodb-datasource-design.md  2026-05-27-mongodb-consolidation-design.md  2026-05-28-test-coverage-improvement-design.md  2026-05-29-er-diagram-optimization-design.md  2026-06-02-config-sync-design.md
docs/zh/Development/: CASSANDRA_TODO.md  REDIS_ASSESSMENT_AND_NEXT_STEPS.md
scripts/: test-integration.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 015_add_mongodb_auth_source.sql  017_sync_state.sql
src-tauri/src/: lib.rs  ssh.rs  state.rs
src-tauri/src/ai/: openai_compat.rs
src-tauri/src/commands/: ai.rs  connection.rs  metadata.rs  mod.rs  mongodb.rs  redis.rs  storage.rs  sync.rs  system.rs  transfer.rs
src-tauri/src/connection_input/: mod.rs
src-tauri/src/datasources/: mod.rs  mongodb.rs  redis.rs
src-tauri/src/db/: local.rs
src-tauri/src/db/drivers/: cassandra.rs  clickhouse.rs  db2.rs  duckdb.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
src-tauri/src/mcp/: handler.rs  main.rs  mod.rs  notifications.rs  sampling.rs  server.rs  types.rs
src-tauri/src/mcp/prompts/: analyze_table.rs  mod.rs
src-tauri/src/mcp/resources/: connections.rs  mod.rs  tables.rs
src-tauri/src/mcp/tools/: sql.rs
src-tauri/src/mcp/transport/: http.rs  mod.rs  stdio.rs
src-tauri/src/models/: mod.rs
src-tauri/src/sync/: crypto.rs  manager.rs  mod.rs  provider.rs  s3.rs  scheduler.rs  webdav.rs
src-tauri/tests/: db2_integration.rs  mcp_integration.rs  mongodb_integration.rs  mssql_integration.rs
src-tauri/tests/common/: db2_context.rs  mongodb_context.rs
src/components/: theme-provider.tsx
src/components/business/DataGrid/: TableView.tsx
src/components/business/DataGrid/tableView/: selectionCopy.unit.test.ts
src/components/business/ERDiagram/: erDiagramLayout.unit.test.ts  types.unit.test.ts
src/components/business/Editor/: SqlEditor.tsx
src/components/business/Redis/value-viewer/: RedisGeoViewer.tsx
src/components/business/Sidebar/: ConnectionContextMenu.tsx  ConnectionList.tsx  ImportDialog.tsx
src/components/business/Sidebar/connection-list/: ConnectionDialog.tsx
src/components/settings/: LanguageSelector.tsx  SettingsDialog.tsx  SyncSettings.tsx
src/components/ui/: button.tsx
src/lib/: driver-registry.tsx  driver-registry.unit.test.ts
src/lib/connection-form/: rules.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.ts  ja.ts  zh.ts
src/lib/tree-adapters/: mongodb-adapter.tsx  sql-adapter.tsx  types.tsx
src/services/: api.ts  metadata.service.test.ts  mocks.ts
src/styles/: theme.css
