[package]
name = "dbpaw"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "dbpaw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dbpaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbpaw-mcp"
path = "src/mcp/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "macros", "chrono", "json", "rust_decimal"] }
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }
tiberius = { version = "0.12", features = ["chrono", "rust_decimal", "sql-browser-tokio"] }
bb8 = "0.8.6"
async-trait = "0.1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
aes-gcm = "0.10"
base64 = "0.22"
duckdb = { version = "1.2.2", features = ["bundled"] }
oracle = "0.6"
odbc-api = "5"
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "cluster-async", "sentinel"] }
mongodb = "3.6"
scylla = { version = "1.6", features = ["chrono-04"] }
aws-sdk-dynamodb = "1"
aws-config = "1"
aws-credential-types = "1"
urlencoding = "2.1"
quick-xml = "0.37"
fontique = { version = "0.9", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
tiberius = { version = "0.12", features = ["winauth"] }

[target.'cfg(unix)'.dependencies]
tiberius = { version = "0.12", features = ["integrated-auth-gssapi"] }

[dev-dependencies]
testcontainers = "0.15.0"
